--- a/src/main/resources/templates/rapports.html
+++ b/src/main/resources/templates/rapports.html
@@ -57,8 +57,8 @@
 								    		for="mc">Année</label>
 								  	</div> 
 						      		<select name="a" class="custom-select custom-select-sm">
-						      			<option value="">-</<option>
-						      			<option th:each="i: ${#numbers.sequence(2016, 2019)}" th:text="${i}"></<option>
+						      			<option value="">-</option>
+						      			<option th:each="i: ${#numbers.sequence(2021, 2025)}" th:text="${i}"></option>
 									</select>
 								</div>
 							</div>
